collects/tests/typed-racket/fail/bad-first.rkt
#lang typed-scheme
(require scheme/list)
(first (cons 1 2))
